<resources>
    <string name="app_name">Cloud File Manager</string>
    <string name="intro">Cloud File Manager</string>
    <string name="tv1">SignUp</string>
    <string name="tv2">Already have an account? Sign in here</string>
    <string name="b1">Sign Up</string>
    <string name="intro2">Cloud File Manager</string>
    <string name="login">Login</string>
    <string name="signin">Sign In</string>
    <string name="notReg">Not registered? Sign Up here</string>
    <string name="intro3">Cloud File Manager</string>
    <string name="select">Select One</string>
    <string name="pic">Pictures</string>
    <string name="so">Songs</string>
    <string name="documents">Documents</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="passw">Password</string>
    <string name="cPassw">Confirm Password</string>
    <string name="ema">Email</string>
    <string name="pass">Password</string>
    <string name="cF">Choose File</string>
    <string name="uF">Upload</string>
    <string name="sU">Show Uploads</string>
    <string name="fileTv">Upload Files</string>
    <string name="fTf">Enter File Name</string>
    <string name="ffTv">Fetching Files</string>
    <string name="cImage">Choose Image</string>
    <string name="iTv">Enter Image Name</string>
    <string name="uImage">Upload</string>
    <string name="camBtn">Camera</string>
    <string name="sUpBtn">Show Uploads</string>
    <string name="fetPic">Fetching Pictures</string>
    <string name="songTv">Upload Songs</string>
    <string name="chSong">Choose Song</string>
    <string name="soName">Enter Song Name</string>
    <string name="upSong">Upload</string>
    <string name="shSon">Show Uploads</string>
    <string name="play">Tap To Play Music</string>


</resources>