<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity"
    android:background="@drawable/back">


    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/intro3"
        android:textColor="#FDF8F8"
        android:textSize="50dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.43" />

    <TextView
        android:id="@+id/select"
        android:layout_width="105dp"
        android:layout_height="38dp"
        android:layout_marginTop="16dp"
        android:fontFamily="cursive"
        android:text="@string/select"
        android:textColor="#FFFFFF"
        android:textSize="27dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/intro" />


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@color/colorPrimary"
        android:fontFamily="sans-serif-smallcaps"
        android:text="@string/logout"

        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="107dp"
        android:layout_height="93dp"

        android:layout_marginLeft="44dp"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34"
        app:srcCompat="@drawable/images2" />

    <ImageButton
        android:id="@+id/songButton"
        android:layout_width="107dp"
        android:layout_height="93dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.34"
        app:srcCompat="@drawable/songs1" />


    <ImageButton
        android:id="@+id/documentsButton"
        android:layout_width="107dp"
        android:layout_height="93dp"
        android:layout_marginEnd="44dp"
        android:layout_marginRight="44dp"
        app:layout_constraintBottom_toTopOf="@+id/logout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.588"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.613"
        app:srcCompat="@drawable/documents1" />


    <TextView
        android:id="@+id/documentsTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"

        android:layout_marginLeft="2dp"
        android:layout_marginTop="8dp"
        android:text="@string/documents"
        android:textColor="#FDF8F8"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/documentsButton" />

    <TextView
        android:id="@+id/picturesTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/pic"
        android:textColor="#FDF8F8"
        android:textSize="20dp"

        app:layout_constraintEnd_toStartOf="@+id/songTv"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageButton" />

    <TextView
        android:id="@+id/songTv"
        android:layout_width="59dp"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="68dp"
        android:layout_marginRight="68dp"
        android:text="@string/so"
        android:textColor="#FDF8F8"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/songButton" />

</androidx.constraintlayout.widget.ConstraintLayout>